Adjust services to stateId attribute

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <form action="/mapdata" method="get" id="form">
     <div>
       <label for="stateId">Bundesland:</label>
-      <select name="BL_ID" id="stateId">
+      <select name="stateId" id="stateId">
         <option value="0">alle</option>
         <option value="8">Baden-Württemberg</option>
         <option value="9">Bayern</option>
