Speedup getMapdata and measure time

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
     <p>Generierte URL: <a href="#" target="_blank" rel="noopener noreferrer" id="form-url"></a></p>
   </div>
 
-  <svg height="800" viewBox="0 0 125 100" transform="scale(-1,1) rotate(180)" id="map"></svg>
+  <svg height="800" viewBox="0 0 125 100" id="map"></svg>
 
   <script type="module" src="main.js"></script>
 </body>
